fix: adding improvements