@@ -1,20 +1,170 @@
-plugins {
-    id("java")
-}
+import io.gitlab.arturbosch.detekt.Detekt
+import io.gitlab.arturbosch.detekt.DetektCreateBaselineTask
+import org.jetbrains.dokka.gradle.engine.parameters.VisibilityModifier
+import org.jetbrains.kotlin.gradle.dsl.JvmTarget
 
+/**
+ * artifact group
+ */
 group = "rk.powermilk"
-version = "1.0-SNAPSHOT"
+
+/**
+ * project version
+ */
+version = "1.0.0-snapshot"
+
+val javaVersion = JavaVersion.VERSION_21
+val jvmTargetVersion = JvmTarget.JVM_21
+
+plugins {
+    alias(libs.plugins.kotlin.jvm)
+    alias(libs.plugins.test.logger)
+    alias(libs.plugins.dokka)
+    alias(libs.plugins.detekt)
+    jacoco
+}
 
 repositories {
     mavenCentral()
 }
 
+java {
+    sourceCompatibility = javaVersion
+    targetCompatibility = javaVersion
+}
+
+// dependencies
 dependencies {
-    testImplementation(platform("org.junit:junit-bom:5.10.0"))
-    testImplementation("org.junit.jupiter:junit-jupiter")
-    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
+    detektPlugins(libs.detekt)
+    implementation(libs.kotlinx)
+    testImplementation(libs.junit)
+    testImplementation(libs.junit.params)
+    testImplementation(libs.mockk)
+    testImplementation(libs.kotlinx.test)
+    testImplementation(libs.turbine)
+    testImplementation(kotlin("test"))
+}
+
+testlogger {
+    showStackTraces = false
+    showFullStackTraces = false
+    showCauses = false
+    slowThreshold = 10000
+    showSimpleNames = true
+}
+
+kotlin {
+    compilerOptions {
+        verbose = true
+        jvmTarget.set(jvmTargetVersion)
+    }
+}
+
+detekt {
+    source.setFrom("src/main/kotlin")
+    config.setFrom("$projectDir/detekt.yml")
+    autoCorrect = true
+}
+
+dokka {
+    dokkaSourceSets.main {
+        jdkVersion.set(javaVersion.toString().toInt()) // Used for linking to JDK documentation
+        skipDeprecated.set(false)
+    }
+
+    pluginsConfiguration.html {
+        dokkaSourceSets {
+            configureEach {
+                documentedVisibilities.set(
+                    setOf(
+                        VisibilityModifier.Public,
+                        VisibilityModifier.Private,
+                        VisibilityModifier.Protected,
+                        VisibilityModifier.Internal,
+                        VisibilityModifier.Package,
+                    )
+                )
+            }
+        }
+    }
 }
 
 tasks.test {
+    jvmArgs("-XX:+EnableDynamicAgentLoading")
     useJUnitPlatform()
+    finalizedBy(tasks.jacocoTestReport)
+}
+
+
+tasks.jacocoTestReport {
+    dependsOn(tasks.test)
+    reports {
+        xml.required.set(true)
+        html.required.set(true)
+        csv.required.set(false)
+    }
+
+
+    classDirectories.setFrom(
+        files(
+            classDirectories.files.map {
+                fileTree(it) {
+                    exclude(
+                        "**/MainKt$*.class",
+                    )
+                }
+            }
+        )
+    )
+
+    finalizedBy(tasks.jacocoTestCoverageVerification)
+}
+
+tasks.jacocoTestCoverageVerification {
+    dependsOn(tasks.jacocoTestReport)
+    classDirectories.setFrom(tasks.jacocoTestReport.get().classDirectories)
+
+    val excludesList = listOf(
+        "rk.powermilk.search.MainKt*",
+    )
+
+    violationRules {
+        rule {
+            excludes = excludesList
+            limit {
+                minimum = "0.75".toBigDecimal()
+            }
+        }
+
+        rule {
+            enabled = true
+            element = "CLASS"
+            includes = listOf("rk.*")
+            excludes = excludesList
+
+            limit {
+                counter = "LINE"
+                value = "COVEREDRATIO"
+                minimum = "0.75".toBigDecimal()
+            }
+        }
+    }
+}
+
+tasks.register("cleanReports") {
+    doLast {
+        delete("${layout.buildDirectory}/reports")
+    }
+}
+
+tasks.register("coverage") {
+    dependsOn(tasks.test, tasks.jacocoTestReport, tasks.jacocoTestCoverageVerification)
+}
+
+tasks.withType<Detekt>().configureEach {
+    jvmTarget = jvmTargetVersion.target
+}
+
+tasks.withType<DetektCreateBaselineTask>().configureEach {
+    jvmTarget = jvmTargetVersion.target
 }
